--- a/app/src/main/res/layout/fragment_onboarding.xml
+++ b/app/src/main/res/layout/fragment_onboarding.xml
@@ -6,10 +6,20 @@
     android:layout_height="match_parent"
     tools:context=".presentation.screens.onboarding.OnboardingFragment">
 
+
+    <me.relex.circleindicator.CircleIndicator3
+        android:id="@+id/indicator"
+        android:layout_width="match_parent"
+        android:layout_height="48dp"
+        android:layout_alignParentBottom="true"
+        android:background="#F4511E"
+        app:layout_constraintBottom_toBottomOf="parent" />
+    
     <androidx.viewpager2.widget.ViewPager2
         android:id="@+id/onboardingVp"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:layout_above="@id/indicator"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
