--- a/app/src/main/res/layout/fragment_register.xml
+++ b/app/src/main/res/layout/fragment_register.xml
@@ -13,9 +13,11 @@
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:text="@string/your_name"
+        android:paddingStart="10dp"
+        android:background="@drawable/soft_water_circle"
         android:textAlignment="textStart"
         android:textColor="@color/azul_rocoso"
-        android:textSize="30sp"
+        android:textSize="35sp"
         android:textStyle="bold"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -28,10 +30,12 @@
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginVertical="8dp"
+        android:background="@drawable/soft_water_circle"
         android:text="@string/what_would"
         android:textAlignment="textStart"
         android:textColor="@color/azul_rocoso"
-        android:textSize="24sp"
+        android:textSize="26sp"
+        android:paddingStart="10dp"
         android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -67,8 +71,10 @@
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginVertical="16dp"
+        android:layout_marginTop="24dp"
         android:background="@drawable/blue_button"
         android:text="@string/start_option"
+        android:textColor="@color/white"
         app:backgroundTint="@null"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
