--- a/app/src/main/res/layout/card_layout.xml
+++ b/app/src/main/res/layout/card_layout.xml
@@ -5,12 +5,13 @@
     android:id="@+id/information_card_view"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
+    android:layout_marginVertical="6dp"
+    android:layout_marginHorizontal="2dp"
     android:clickable="true"
     android:focusable="true"
     app:cardBackgroundColor="@color/white"
     app:cardCornerRadius="12dp"
-    app:cardElevation="4dp"
-    app:cardUseCompatPadding="true">
+    app:cardElevation="4dp">
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
@@ -44,13 +45,13 @@
             android:id="@+id/description_information"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
+            android:layout_marginTop="18dp"
             android:layout_marginEnd="16dp"
             android:fontFamily="@font/montserrat_regular"
             android:text="@string/description_information"
             android:textAlignment="textStart"
             android:textColor="@color/black"
             android:textSize="20sp"
-            android:layout_marginTop="18dp"
             android:visibility="gone"
             app:layout_constraintEnd_toStartOf="@+id/imageDescriptionInformation"
             app:layout_constraintStart_toStartOf="parent"
