--- a/app/src/main/res/layout/fragment_information.xml
+++ b/app/src/main/res/layout/fragment_information.xml
@@ -1,24 +1,30 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/InformationFragment"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/secondary_background_gray"
+    android:fillViewport="true"
+    android:orientation="vertical"
     android:tag="fragment_information_tag"
     tools:context=".presentation.screens.information.InformationFragment">
 
-    
+    <androidx.constraintlayout.widget.ConstraintLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
+
         <TextView
             android:id="@+id/yourName_here"
-            android:layout_width="wrap_content"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:layout_marginStart="25dp"
+            android:layout_marginHorizontal="16dp"
             android:layout_marginTop="16dp"
             android:fontFamily="@font/fredokaone_regular"
             android:textColor="@color/black"
             android:textSize="26sp"
+            app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
             tools:text="👋 Hi User" />
@@ -27,13 +33,14 @@
             android:id="@+id/informationAreaTitleTv"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:layout_marginStart="25dp"
+            android:layout_marginHorizontal="16dp"
             android:layout_marginTop="16dp"
             android:fontFamily="@font/poppins_regular"
             android:text="@string/information_area_title"
             android:textColor="@color/azul_rocoso"
             android:textSize="28sp"
             android:textStyle="bold"
+            app:layout_constraintEnd_toStartOf="@+id/more_information_about_fragment"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/yourName_here" />
 
@@ -52,12 +59,11 @@
 
         <TextView
             android:id="@+id/informationAreaDescriptionHeaderTv"
-            android:layout_width="364dp"
-            android:layout_height="35dp"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_marginHorizontal="16dp"
             android:layout_marginTop="16dp"
             android:fontFamily="@font/poppins_regular"
-            android:paddingStart="10dp"
-            android:paddingEnd="10dp"
             android:text="@string/information_area_description_header"
             android:textColor="@color/soft_black"
             android:textSize="22sp"
@@ -68,8 +74,9 @@
         <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/recycler_view_information"
             android:layout_width="0dp"
-            android:layout_height="0dp"
+            android:layout_height="match_parent"
             android:layout_marginHorizontal="16dp"
+            android:nestedScrollingEnabled="false"
             app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
@@ -77,5 +84,6 @@
             app:layout_constraintTop_toBottomOf="@+id/informationAreaDescriptionHeaderTv"
             tools:listitem="@layout/card_layout" />
 
+    </androidx.constraintlayout.widget.ConstraintLayout>
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+</androidx.core.widget.NestedScrollView>
