--- a/app/src/main/res/drawable/shimmer_button.xml
+++ b/app/src/main/res/drawable/shimmer_button.xml
@@ -1,11 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android">
-
-    <gradient
-        android:startColor="#C8C8C9"
-        android:endColor="#C8C8C9" />
-
-    <corners android:radius = "40dp"
-        android:bottomLeftRadius="40dp"/>
-
+    <solid android:color="@color/shimmer" />
+    <corners
+        android:bottomLeftRadius="40dp"
+        android:radius="40dp" />
 </shape>
