--- a/app/src/main/res/layout/shimmer_psychologists.xml
+++ b/app/src/main/res/layout/shimmer_psychologists.xml
@@ -22,7 +22,7 @@
             android:id="@+id/image_psychologist"
             android:layout_width="240dp"
             android:layout_height="240dp"
-            android:src="@drawable/c8c9c9_shimmer"
+            android:src="@color/shimmer"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
@@ -31,22 +31,22 @@
             android:id="@+id/image_psychologist_type"
             android:layout_width="55dp"
             android:layout_height="55dp"
-            android:src="@drawable/c8c9c9_shimmer"
+            android:src="@color/shimmer"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.85"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintVertical_bias="0.477" />
+            app:layout_constraintVertical_bias="0.5" />
 
         <de.hdodenhof.circleimageview.CircleImageView
             android:id="@+id/image_psychologist_language"
             android:layout_width="55dp"
             android:layout_height="55dp"
-            android:src="@drawable/c8c9c9_shimmer"
+            android:src="@color/shimmer"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.15"
+            app:layout_constraintHorizontal_bias="0.1"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintVertical_bias="0.043" />
@@ -56,7 +56,7 @@
             android:layout_width="200dp"
             android:layout_height="20dp"
             android:layout_marginVertical="16dp"
-            android:background="#C9C9C8"
+            android:background="@color/shimmer"
             app:layout_constraintBottom_toTopOf="@+id/psychologist_specialist"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
@@ -67,16 +67,17 @@
             android:layout_width="250dp"
             android:layout_height="64dp"
             android:layout_marginBottom="16dp"
-            android:background="#C9C9C8"
+            android:background="@color/shimmer"
             app:layout_constraintBottom_toTopOf="@+id/contact_psychologist"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/psychologist_name" />
 
-        <Button
+        <com.google.android.material.button.MaterialButton
+            style="@style/Widget.MaterialComponents.Button"
             android:id="@+id/contact_psychologist"
-            android:layout_width="315dp"
-            android:layout_height="49dp"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
             android:background="@drawable/shimmer_button"
             app:backgroundTint="@null"
             app:layout_constraintBottom_toBottomOf="parent"
