--- a/app/src/main/res/layout/card_types.xml
+++ b/app/src/main/res/layout/card_types.xml
@@ -8,6 +8,7 @@
     app:cardBackgroundColor="@color/white"
     app:cardCornerRadius="12dp"
     app:cardElevation="4dp"
+    app:cardPreventCornerOverlap="false"
     app:cardUseCompatPadding="true">
 
     <androidx.constraintlayout.widget.ConstraintLayout
