--- a/app/src/main/res/layout/fragment_information.xml
+++ b/app/src/main/res/layout/fragment_information.xml
@@ -7,13 +7,14 @@
     android:layout_height="match_parent"
     android:background="@color/secondary_background_gray"
     android:fillViewport="true"
-    android:orientation="vertical"
     android:tag="fragment_information_tag"
     tools:context=".presentation.screens.information.InformationFragment">
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+        android:layout_height="wrap_content"
+        android:focusable="true"
+        android:focusableInTouchMode="true">
 
         <TextView
             android:id="@+id/yourName_here"
@@ -74,7 +75,7 @@
         <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/recycler_view_information"
             android:layout_width="0dp"
-            android:layout_height="match_parent"
+            android:layout_height="wrap_content"
             android:layout_marginHorizontal="16dp"
             android:nestedScrollingEnabled="false"
             app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
