--- a/app/src/main/res/layout/fragment_types.xml
+++ b/app/src/main/res/layout/fragment_types.xml
@@ -1,12 +1,18 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:fillViewport="true"
+    android:orientation="vertical"
     android:background="@color/secondary_background_gray"
     android:tag="fragment_types_tag"
     tools:context=".presentation.screens.types.TypesFragment">
+
+    <androidx.constraintlayout.widget.ConstraintLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
 
     <TextView
         android:id="@+id/informationAreaTitleTv"
@@ -65,5 +71,6 @@
         app:layout_constraintTop_toBottomOf="@+id/informationAreaDescriptionHeaderTv"
         tools:listitem="@layout/card_types" />
 
+    </androidx.constraintlayout.widget.ConstraintLayout>
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+</androidx.core.widget.NestedScrollView>
