--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -28,6 +28,7 @@
     <color name="secondary_sub_gray">#d2dbe0</color>
     <color name="secondary_background_gray">#edf0f2</color>
     <color name="azul_rocoso">#07435f</color>
+    <color name="azul_rocoso_soft">#0E5474</color>
     <color name="shimmer">#dddddd</color>
 
 
