--- a/app/src/main/res/layout/fragment_information.xml
+++ b/app/src/main/res/layout/fragment_information.xml
@@ -18,6 +18,7 @@
         <TextView
             android:id="@+id/yourName_here"
             android:layout_width="0dp"
+            android:paddingStart="10dp"
             android:layout_height="wrap_content"
             android:layout_marginHorizontal="16dp"
             android:layout_marginTop="16dp"
@@ -35,6 +36,7 @@
             android:layout_height="wrap_content"
             android:layout_marginHorizontal="16dp"
             android:layout_marginTop="16dp"
+            android:paddingStart="10dp"
             android:fontFamily="@font/poppins_regular"
             android:text="@string/information_area_title"
             android:textColor="@color/azul_rocoso"
@@ -60,6 +62,7 @@
         <TextView
             android:id="@+id/informationAreaDescriptionHeaderTv"
             android:layout_width="0dp"
+            android:paddingStart="10dp"
             android:layout_height="wrap_content"
             android:layout_marginHorizontal="16dp"
             android:layout_marginTop="16dp"
