--- a/app/src/main/res/layout/fragment_types.xml
+++ b/app/src/main/res/layout/fragment_types.xml
@@ -19,11 +19,13 @@
             android:layout_height="wrap_content"
             android:layout_marginStart="16dp"
             android:layout_marginTop="16dp"
+            android:layout_marginEnd="8dp"
             android:fontFamily="@font/poppins_regular"
             android:text="@string/types_title"
             android:textColor="@color/azul_rocoso"
             android:textSize="28sp"
             android:textStyle="bold"
+            app:layout_constraintEnd_toStartOf="@+id/more_information_about_fragment"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
 
@@ -33,7 +35,6 @@
             android:layout_height="50dp"
             android:layout_marginEnd="16dp"
             android:clickable="true"
-            app:layout_constraintBottom_toBottomOf="@+id/informationAreaTitleTv"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintTop_toTopOf="@+id/informationAreaTitleTv"
             app:lottie_autoPlay="true"
@@ -64,8 +65,8 @@
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            tools:itemCount="4"
             app:layout_constraintTop_toBottomOf="@+id/informationAreaDescriptionHeaderTv"
+            tools:itemCount="7"
             tools:listitem="@layout/card_types" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
